Fix controls alignment for vjs-live

--- a/src/css/videojs-hola-skin.less
+++ b/src/css/videojs-hola-skin.less
@@ -95,7 +95,8 @@
     .vjs-control-bar>.vjs-control {
         margin-top: -3px;
     }
-    .vjs-control-bar>.vjs-progress-control {
+    .vjs-control-bar>.vjs-progress-control,
+    &.vjs-live .vjs-control-bar>.vjs-control {
         margin-top: 0;
     }
     .vjs-control:focus .vjs-menu {
